# AFLpp-Android-Greybox

./: .gitignore  AFL_version.md  CMakeLists_arm.txt  CMakeLists_x86.txt  README.md
android/: afl.js  afl_x86.js  fuzz.md  readme.md  server  server.c
android-fuzzing/jenv/: jenv.c
android-fuzzing/native/: CMakeLists.txt  afl_x86.js  fuzz.c
android-fuzzing/slinked_jni/: afl_x86.js  fuzz.c
android-fuzzing/wlinked_jni/: CMakeLists.txt  afl_x86.js  fuzz.c
android/app-debug/: AndroidManifest.xml  classes2.dex  classes3.dex  classes4.dex  resources.arsc
android/app-debug/res/drawable/: abc_btn_check_material_anim.xml  design_password_eye.xml  m3_password_eye.xml  mtrl_checkbox_button.xml  mtrl_checkbox_button_icon.xml  mtrl_switch_thumb.xml
android/app-debug/res/layout/: abc_activity_chooser_view.xml  abc_activity_chooser_view_list_item.xml  abc_alert_dialog_button_bar_material.xml  abc_alert_dialog_material.xml  abc_alert_dialog_title_material.xml  abc_cascading_menu_item_layout.xml  abc_dialog_title_material.xml  abc_list_menu_item_layout.xml  abc_popup_menu_item_layout.xml  abc_screen_toolbar.xml  abc_search_view.xml  abc_select_dialog_material.xml  (+21 more)
android/app-debug/res/layout-v21/: notification_action.xml  notification_action_tombstone.xml  notification_template_custom_big.xml
android/app-debug/res/layout-v26/: abc_screen_toolbar.xml
android_fuzzing/jenv/: jenv.c
android_fuzzing/slinked_jni/: afl.js
fuzzgoat/: Makefile
test_demo/: settings.gradle.kts
test_demo/app/: build.gradle.kts
test_demo/gradle/wrapper/: gradle-wrapper.properties
(+5 files in other folders)
